--- a/runsmart/index.html
+++ b/runsmart/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RunSmart</title>
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/style_fonts_icons.css">
     <link rel="stylesheet" href="css/fonts.css">
